--- a/project/src/components/style.css
+++ b/project/src/components/style.css
@@ -18,7 +18,7 @@ body {
 .top-nav {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #00baf0;
   background: #d8e021;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -101,10 +101,14 @@ body {
 @media (max-width: 700px) {
   .menu-button-container {
     display: flex;
+    z-index: 4;
   }
 
   .logo {
-    display: flex;
+    margin-left: auto;
+    position: absolute;
+    align-items: center;
+    padding-top: 50px;
   }
 
   .menu {
@@ -123,17 +127,20 @@ body {
     padding: 0;
     border: 0;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 3;
   }
   #menu-toggle:checked ~ .menu li {
     border: 1px solid #333;
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 3;
   }
   .menu > li {
     display: flex;
     justify-content: center;
     margin: 0;
+    padding-top: 10px;
     padding: 0.5em 0;
     width: 100%;
     color: white;
