--- a/project/src/components/style.css
+++ b/project/src/components/style.css
@@ -1,37 +1,42 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-h2 {
-  vertical-align: center;
-  text-align: center;
-}
-
-html,
-body {
-  margin: 0;
-  height: 100%;
-}
+@import url("https://fonts.googleapis.com/css2?family=Playball&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: "Raleway";
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
+}
+
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal.active {
+  transform: translateY(0px);
+  opacity: 1;
 }
 
 .top-nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #d8e021;
-  background: #d8e021;
+  background-color: #2e2e2e;
+  background: #2e2e2e;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #fff;
+  color: #d8e021;
   height: 80px;
   padding: 1em;
+  position: relative;
+  z-index: 2;
 }
 
 .logo {
+  position: relative;
   width: 150px;
   justify-content: center;
   margin-top: auto;
-  z-index: 1;
+  z-index: 4;
 }
 
 .menu {
@@ -50,16 +55,30 @@ body {
 .menu > li {
   margin: 2rem;
   overflow: hidden;
+  font-weight: bold;
+  letter-spacing: 0.4rem;
 }
 
 .under-banner {
   content: "";
-  background: url(https://i.ibb.co/3zWbQFP/Untitled-Artwork-15.png) repeat-x
+  background: url(https://i.ibb.co/d6vBcJL/Untitled-Artwork-22.png) repeat-x
     scroll center 0px;
   position: absolute;
-  top: 30px;
+  top: 100px;
   height: 80px;
   width: 100%;
+  z-index: 1;
+}
+
+.top-banner {
+  content: "";
+  background: url(https://i.ibb.co/M7RsQ4Y/Untitled-Artwork-28.png) repeat-x
+    scroll center 0px;
+  position: relative;
+  bottom: 30px;
+  height: 80px;
+  width: 100%;
+  z-index: 4;
 }
 
 .menu-button-container {
@@ -141,14 +160,14 @@ body {
     padding: 0;
     border: 0;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    z-index: 3;
+    z-index: 5;
   }
   #menu-toggle:checked ~ .menu li {
-    border: 1px solid #333;
+    border: 1px solid #3d3d3d;
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    z-index: 3;
+    z-index: 5;
   }
   .menu > li {
     display: flex;
@@ -158,10 +177,52 @@ body {
     padding: 0.5em 0;
     width: 100%;
     color: white;
-    background-color: #222;
+    background-color: #2e2e2e;
     border: none;
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
   }
+}
+
+/* about page  */
+.about-heading {
+  border: medium none;
+  width: auto;
+  margin: 0 auto 25px;
+  padding: 0px 0px 10px;
+  color: white;
+  position: relative;
+  text-align: center;
+  font: 400 40px/45px "Playball", cursive;
+  text-transform: capitalize !important;
+  letter-spacing: 0.2px;
+}
+
+@media (max-width: 700px) {
+  .box-heading {
+    font-size: 30px;
+    line-height: 34px;
+    margin-bottom: 10px;
+  }
+}
+
+.dividers {
+  content: url(https://i.ibb.co/kQjY7sd/blackdivider.png);
+}
+
+.about-background {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: contain;
+  background-image: url(https://i.ibb.co/F5Fy6JF/Untitled-Artwork-25.png);
+}
+
+.image {
+  transition: all 1s ease-in-out;
+}
+
+.about-para {
+  font-size: 13px;
 }
